# OGC-cloth-test2

./: CMakeLists.txt  COMPILATION_FIXES_PROGRESS.md  COMPILATION_STATUS.md  PROJECT_SUMMARY.md  README.md  build.sh
include/physics/: BulletIntegration.h  ClothSimulation.h  OGCContactModel.h  Particle.h
include/rendering/: Camera.h  ContactVisualizer.h  OpenGLRenderer.h  Shader.h
src/: main.cpp
src/physics/: BulletIntegration.cpp  ClothSimulation.cpp  OGCContactModel.cpp  Particle.cpp
src/rendering/: Camera.cpp  ContactVisualizer.cpp  OpenGLRenderer.cpp  Shader.cpp
